# log-analyzer-toolkit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  EXTENDING.md  INTEGRATION.md  Makefile  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  TECHNICAL_DEBT.md  USER_STORIES.md  alembic.ini  demo_analytics.py  demo_reporting.py  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  log_analyzer.db  package-lock.json  package.json  pyproject.toml  requirements.txt  run_dev.sh
.github/workflows/: ci.yml
backend/: Dockerfile  config.py  constants.py  logging_config.py  logging_middleware.py  main.py  rate_limit.py
backend/api/: deps.py  realtime.py  routes.py  schemas.py
backend/db/: crud.py  database.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 787f2208a33c_initial_migration.py
backend/services/: analyzer_service.py  triage_service.py
backend/tests/: test_api.py  test_database.py  test_deps.py  test_main.py  test_services.py
examples/: realtime-demo.html
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: LevelChart.vue  LiveLogViewer.vue  LogUpload.vue  StatCard.vue  ThemeToggle.vue
frontend/src/components/__tests__/: HelloWorld.spec.js  LevelChart.spec.js  LiveLogViewer.spec.js  LogUpload.spec.js  StatCard.spec.js  ThemeToggle.spec.js
frontend/src/composables/: useApi.js
frontend/src/router/: index.js
frontend/src/services/: liveLogs.js
frontend/src/views/: AnalysesListView.vue  AnalysisView.vue  HomeView.vue  UploadView.vue
frontend/src/views/__tests__/: AnalysesListView.spec.js  AnalysisView.spec.js  HomeView.spec.js  UploadView.spec.js
log_analyzer/: __init__.py  __main__.py  analytics.py  analyzer.py  charts.py  cli.py  config.py  constants.py  parsers.py  reader.py  report.py  stats_models.py  triage.py
log_analyzer/ai_providers/: __init__.py  anthropic_provider.py  base.py  dummy_provider.py  factory.py  gemini_provider.py  ollama_provider.py
tests/: conftest.py  test_ai_providers.py  test_analytics.py  test_analyzer.py  test_analyzer_integration.py  test_charts.py  test_cli.py  test_cli_display.py  test_config.py  test_coverage_extras.py  test_coverage_final.py  test_coverage_push.py  test_factory.py  test_fixes.py  test_parser_utils.py  test_parsers.py  test_parsers_comprehensive.py  test_parsers_legacy.py  test_provider_errors.py  test_reader.py  test_realtime_smoke.py  test_report.py  test_triage.py  test_triage_enrichment.py
