[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analyzer-toolkit"
version = "0.1.0"
description = "A powerful command-line tool for parsing, analyzing, and troubleshooting log files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["logging", "log-analysis", "troubleshooting", "devops", "sysadmin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
log-analyzer = "log_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/log-analyzer-toolkit"
Repository = "https://github.com/yourusername/log-analyzer-toolkit"
Issues = "https://github.com/yourusername/log-analyzer-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["log_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=log_analyzer",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
filterwarnings = [
    "ignore::FutureWarning:google.auth.*:",
    "ignore::FutureWarning:google.oauth2.*:",
    "ignore::FutureWarning:google.api_core.*:",
    "ignore:.*support for the .google.generativeai. package has ended.*:FutureWarning",
    "ignore:.*urllib3 v2 only supports OpenSSL.*:urllib3.exceptions.NotOpenSSLWarning",
]

[tool.coverage.run]
source = ["log_analyzer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, can tighten later
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "rich.*",
    "click.*",
    "anthropic.*",
    "google.generativeai.*",
    "httpx.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "migrations",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["log_analyzer", "backend"]
